# flexmeasures/ui/static/openapi-specs.json
@@ -1800,10 +1800,14 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Account1"
+                "$ref": "#/components/schemas/AccountPatchSchema"
               },
               "example": {
                 "name": "Test Account Updated",
+                "account_roles": [
+                  1,
+                  3
+                ],
                 "primary_color": "#1a3443",
                 "secondary_color": "#f1a122",
                 "logo_url": "https://example.com/logo.png",
@@ -1983,7 +1987,7 @@
       },
       "post": {
         "summary": "Create a new account.",
-        "description": "Create a new account with a required name and optional UI colors.\n\n- Admin users can create accounts.\n- Consultant users can create accounts only if their account has the\n  `CONSULTANCY_ACCOUNT_ROLE` account role.\n- For consultant users, the newly created account is automatically\n  linked to their own account as consultancy account.\n",
+        "description": "Create a new account with a required name.\n\n- Admin users can create accounts.\n- Consultant users can create accounts only if their account has the\n  `CONSULTANCY_ACCOUNT_ROLE` account role.\n- For consultant users, the newly created account is automatically\n  linked to their own account as consultancy account.\n",
         "security": [
           {
             "ApiKeyAuth": []
@@ -1999,8 +2003,7 @@
               },
               "example": {
                 "name": "New Customer Account",
-                "primary_color": "#1a3443",
-                "secondary_color": "#f1a122"
+                "consultancy_account_id": 2
               }
             }
           }
@@ -5013,6 +5016,18 @@
               "integer",
               "null"
             ]
+          }
+        },
+        "required": [
+          "name"
+        ],
+        "additionalProperties": false
+      },
+      "AccountPatchSchema": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
           },
           "primary_color": {
             "type": [
@@ -5025,11 +5040,27 @@
               "string",
               "null"
             ]
+          },
+          "logo_url": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "consultancy_account_id": {
+            "type": [
+              "integer",
+              "null"
+            ]
+          },
+          "attributes": {},
+          "account_roles": {
+            "type": "array",
+            "items": {
+              "type": "integer"
+            }
           }
         },
-        "required": [
-          "name"
-        ],
         "additionalProperties": false
       },
       "AccountAPIQuerySchema": {
@@ -5711,62 +5742,6 @@
             "type": "string"
           }
         },
-        "additionalProperties": false
-      },
-      "Account1": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "readOnly": true
-          },
-          "name": {
-            "type": [
-              "string",
-              "null"
-            ],
-            "maxLength": 100
-          },
-          "primary_color": {
-            "type": [
-              "string",
-              "null"
-            ],
-            "maxLength": 7
-          },
-          "secondary_color": {
-            "type": [
-              "string",
-              "null"
-            ],
-            "maxLength": 7
-          },
-          "logo_url": {
-            "type": [
-              "string",
-              "null"
-            ],
-            "maxLength": 255
-          },
-          "attributes": {
-            "default": "{}"
-          },
-          "account_roles": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AccountRole"
-            }
-          },
-          "consultancy_account_id": {
-            "type": [
-              "integer",
-              "null"
-            ]
-          }
-        },
-        "required": [
-          "name"
-        ],
         "additionalProperties": false
       },
       "User": {
